workspace/operators/v1/decision/apple_trading_model.md
---
id: apple_trading_model
name: 苹果买卖估值修复模型
category: decision
tags: [decision, valuation, trading]
data_needed: [daily_indicators, price_summary, cashflow, income]
outputs:
  - field: apple_normal_price
    type: float
    desc: 苹果正常价(合理估值对应股价)
  - field: apple_buy_price
    type: float
    desc: 苹果买入价(安全边际充足的入场价)
  - field: apple_sell_price
    type: float
    desc: 苹果卖出价(估值修复完成的退场价)
  - field: buy_logic_statement
    type: str
    desc: 一句话买入逻辑(可证伪、可量化、有时限)
---

## 苹果买卖估值修复模型

以"苹果买卖"类比，建立跨流派统一的三价格买卖框架。核心逻辑：赚估值修复的钱，不贪泡沫顶部的钱。

### 一、三个价格体系

每个标的必须计算三个价格锚点：

| 价格类型 | 定义 | 计算方法 | 对应苹果类比 |
|----------|------|----------|-------------|
| **正常价** | 内在价值的合理估计 | 多种估值方法取中位数（FCF倍数8-10倍对应区间） | 1.5元/斤 |
| **买入价** | 安全边际充足的入场价 | 正常价 x (1 - 安全边际)，通常为正常价的30-40% | 0.3-0.4元/斤 |
| **卖出价** | 估值修复完成的退场价 | 正常价 x 0.5-0.6，即修复至合理区间下沿 | 0.7-0.8元/斤 |

**计算流程**：

```
步骤1：确定正常价
  ├── 核心方法：剔除净现金FCF倍数 8-10倍对应的市值/股价
  ├── 辅助方法：剔除净现金PE 12-15倍对应区间
  ├── 交叉验证：股息率降至3%对应的价格
  └── 取三种方法的中位数

步骤2：确定买入价
  ├── 极端买点：FCF倍数 < 3倍对应价格
  ├── 重仓买点：FCF倍数 3-5倍对应价格
  └── 试探买点：FCF倍数 5-8倍对应价格（仅限小仓位试探）

步骤3：确定卖出价
  ├── 减仓触发：FCF倍数修复至 8倍
  ├── 清仓触发：FCF倍数修复至 10倍 或 涨幅透支5年股息
  └── 绝不恋战：到7-8毛即止盈，不追求1.5元
```

### 二、一句话买入逻辑（强制，可证伪）

每个标的在买入前必须用一句话说清买入逻辑。该逻辑必须满足：

1. **可证伪**：存在明确的失败条件，能被未来数据推翻
2. **可量化**：包含具体的估值指标或业务指标
3. **有时限**：隐含预期修复时间（1-2年为宜）

**格式**：

```
我以[流派]类型买入[标的]，在[核心估值指标=当前值]时建仓，
目标是[估值指标]从[当前值]修复到[目标值]，
预计持有[N]年，修复完成即卖出，绝不恋战。

证伪条件：若[具体指标]发生[具体变化]，则逻辑失败，立即止损。
```

**好的一句话逻辑（通用示例）**：

- "在FCF倍数3倍买入，赌的是行业周期触底反转+去杠杆完成，FCF修复至8倍即卖出"
- "在PB 0.3倍买入，赌的是清算价值保底+管理层换届催化，PB修复至0.6即卖出"
- "在股息率8%买入，赌的是政策风险出清+派息维持，股息率降至4%即卖出"
- "在10年低位买入，赌的是周期价格回升+产能出清，周期70%分位即减仓"

**不合格的一句话逻辑**：

- "这家公司很好，长期持有" -- 不可证伪，无退出标准
- "行业前景广阔" -- 不可量化，无具体指标
- "管理层优秀" -- 主观判断，无证伪条件

**如果说不清一句话逻辑，则不应该买入。**

### 三、卖出纪律

卖出纪律是苹果买卖模型的核心，分四类触发：

| 触发类别 | 触发条件 | 操作 | 原则 |
|----------|----------|------|------|
| **估值修复** | FCF倍数修复至8-10倍 | 分批卖出50-100% | 赚修复的钱，不贪泡沫 |
| **涨幅透支** | 涨幅已透支5-6年股息总和 | 清仓退出 | 不赚最后一个铜板 |
| **逻辑证伪** | 一句话买入逻辑被推翻 | 即时止损 | 逻辑错了就认错 |
| **机会成本** | 发现FCF倍数差>2倍的更优标的 | 切换资金 | 高低切换，动态优化 |

**卖出决策树**：

```
持有标的复核
  ├── 估值修复完成？（FCF倍数>8倍 或 PE>15）
  │   └── 是 → 减仓30-50%，释放资金
  ├── 涨幅透支股息？（涨幅>5年股息总和）
  │   └── 是 → 清仓退出
  ├── 买入逻辑证伪？（核心假设被推翻）
  │   └── 是 → 即时止损，不等反弹
  ├── 存在更优标的？（FCF倍数差>2倍）
  │   └── 是 → 高低切换
  └── 以上均否 → 继续持有，定期复核
```

### 四、与常见误区的对比

| 误区 | 正解 |
|------|------|
| "必须长期持有好公司" | 价格显著低于价值时买入，修复即卖出 |
| 不管价格，只看质地 | 质地再好，价格过高也不买 |
| 持有5-10年等成长 | 聚焦1-2年可验证业绩，估值修复即退出 |
| 与机构比拼远期预测 | 承认信息劣势，不做5年以上预测 |
| 赚泡沫的钱（1.5元） | 赚修复的钱（7-8毛），不贪最后一个铜板 |

### 五、买入逻辑声明模板

```
标的：[名称] [代码]

【苹果买卖定位】
- 正常价格（合理估值）：[如：FCF倍数8-10倍对应XX元]
- 当前价格（买入点）：[当前价格，对应FCF倍数X倍]
- 买入性质：[插眼试探/分批建仓/重仓]
- 目标修复区间：[FCF倍数8倍对应XX元]
- 极端买点：[FCF倍数3倍对应XX元]

【一句话逻辑】
我以"苹果买卖"逻辑，在价格显著低于价值时（3-4毛）买入，
等待估值修复至合理区间下沿（7-8毛）即止盈，
绝不恋战追求泡沫顶部（1.5元）。

【证伪条件】
若[具体条件]发生，则买入逻辑失败，立即止损。

【退出承诺】
- 估值修复至目标区间即减仓/退出
- 不因企业质地否定交易纪律
- 逻辑证伪即止损，不抱幻想
```
